terraform_code/V2-EC2.tf
/*provider "aws" {
    region  = "us-east-1"
}

 resource "aws_instance" "demo-server" {
  ami           = "ami-06c68f701d8090592"
  instance_type = "t2.micro"
  key_name = "dpp"
  security_groups = ["demo-sg"]
 }

resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "SSh Access"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "ssh-port"
  }
}


resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = demo-sg
  description       = "SSH Access"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
  cidr_ipv4         = ["0.0.0.0/0"]
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
  security_group_id = demo-sg
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}*/
provider "aws" {
    region  = "us-east-1"
}

resource "aws_instance" "demo-server" {
  ami           = "ami-06c68f701d8090592"
  instance_type = "t2.micro"
  key_name      = "dpp"
  vpc_security_group_ids = [aws_security_group.demo-sg.id]
}

resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "SSH Access"

  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-port"
  }
}
